@@ -128,7 +128,7 @@ int main(int argc, char** argv)
 
   syncmgr = rra_syncmgr_new();
 
-  if (!rra_syncmgr_connect(syncmgr))
+  if (!rra_syncmgr_connect(syncmgr, NULL))
   {
     fprintf(stderr, "Connection failed\n");
     goto exit;
